--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,30 @@
 }
 
 /*-------------INDEX.php--------------------*/
+.barraNavegacion{
+    /*background: rgba(203,96,179,1);
+    background: -moz-linear-gradient(-45deg, rgba(203,96,179,1) 0%, rgba(113,134,237,1) 0%, rgba(193,70,161,1) 79%, rgba(160,0,112,1) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(203,96,179,1)), color-stop(0%, rgba(113,134,237,1)), color-stop(79%, rgba(193,70,161,1)), color-stop(100%, rgba(160,0,112,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(203,96,179,1) 0%, rgba(113,134,237,1) 0%, rgba(193,70,161,1) 79%, rgba(160,0,112,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(203,96,179,1) 0%, rgba(113,134,237,1) 0%, rgba(193,70,161,1) 79%, rgba(160,0,112,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(203,96,179,1) 0%, rgba(113,134,237,1) 0%, rgba(193,70,161,1) 79%, rgba(160,0,112,1) 100%);
+    background: linear-gradient(135deg, rgba(203,96,179,1) 0%, rgba(113,134,237,1) 0%, rgba(193,70,161,1) 79%, rgba(160,0,112,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cb60b3', endColorstr='#a00070', GradientType=1 );*/
+    background: rgba(183,222,237,1);
+    background: -moz-linear-gradient(-45deg, rgba(183,222,237,1) 0%, rgba(33,180,226,1) 0%, rgba(20,43,51,1) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(183,222,237,1)), color-stop(0%, rgba(33,180,226,1)), color-stop(100%, rgba(20,43,51,1)));
+    background: -webkit-linear-gradient(-45deg, rgba(183,222,237,1) 0%, rgba(33,180,226,1) 0%, rgba(20,43,51,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(183,222,237,1) 0%, rgba(33,180,226,1) 0%, rgba(20,43,51,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(183,222,237,1) 0%, rgba(33,180,226,1) 0%, rgba(20,43,51,1) 100%);
+    background: linear-gradient(135deg, rgba(183,222,237,1) 0%, rgba(33,180,226,1) 0%, rgba(20,43,51,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b7deed', endColorstr='#142b33', GradientType=1 );
+}
 
 /*-------------Carrusel--------------------*/
 
 .carrusel, .carrusel div{
     
-    height: 20vh;
+    /*max-height: 500px;*/
 
 }
 
