--- a/css/style-login-registro.css
+++ b/css/style-login-registro.css
@@ -1,7 +1,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background: url(../img/paisaje1.jpg);
+    background: url(../images/paisaje1.jpg);
     background-size: cover;
     background-attachment: fixed;
     
