--- a/css/style-login-registro.css
+++ b/css/style-login-registro.css
@@ -1,4 +1,4 @@
-body{
+.todo{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     background: url(../images/paisaje1.jpg);
@@ -10,6 +10,68 @@ body{
 * {
     box-sizing: border-box;
 }
+
+.barraNavegacion{
+   
+    background: #0f0c29;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, rgba(36, 36, 62, 0.6), rgba(48, 43, 99, 0.6), rgba(15, 12, 41, 0.6)),url("../images/imgNav.png");  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, rgba(36, 36, 62, 0.6), rgba(48, 43, 99, 0.6), rgba(15, 12, 41, 0.6)),url("../images/imgNav.png"); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
+    background-size: cover;
+     background-repeat: no-repeat;
+    border-bottom: 5px solid rgb(211, 182, 17);
+    
+}
+.logo-barra{
+    max-width: 200px;
+    max-height: 75px;
+}
+.menu-hamburguesa{
+    color: white;
+}
+.items-barra{
+    border-top: 1px solid white;
+    text-align: center;
+}
+.items-barra:last-child{
+    border-bottom: 1px solid white;
+    
+}
+
+
+.items-barra a:hover{
+    
+    background: #0F2027;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, rgba(44, 83, 100, 0.7), rgba(32, 58, 67, 0.7), rgba(15, 32, 39, 0.7));  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, rgba(44, 83, 100, 0.7), rgba(32, 58, 67, 0.7), rgba(15, 32, 39, 0.7)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    transition: ease all 1000ms;
+   
+}
+.items-barra a p{
+    
+    margin: 0;
+
+}
+.items-barra a p, .items-barra a i{
+    color: white;
+    font-weight: bold;
+}
+.boton-ingreso{
+    background: #2C3E50; 
+    color: white;
+    font-weight: bold;
+    width: 100%;
+    margin-top: 20px !important;
+    border: 1px solid black;
+
+}
+.boton-ingreso i{
+    margin-right: 5px;
+}
+.boton-ingreso:hover{
+    background-color: rgba(255, 255, 255, 0.61);
+    color: black;
+}
+
 .contenedor{
     width: 100%;
     padding: 15px;
@@ -17,8 +79,8 @@ body{
 }
 .formulario{
     background: white;
-    margin-top: 150px;
-    margin-bottom: 150px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 3px;
     
 }
@@ -36,7 +98,7 @@ input[type="password"]{
     border: none;
 }
 .input-contenedor{
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     border: 1px solid #aaa;
 }
 .icon{
@@ -73,8 +135,39 @@ p{
     .formulario{
         margin: auto;
         width: 500px;
-        margin-top: 150px;
-        margin-bottom: 150px;
+        margin-top: 50px;
+        margin-bottom: 10px;
         border-radius:5%;
     }
+}
+
+@media (min-width: 992px){
+
+    /*---------------Barra de Navegacion -------------------*/
+
+.div-barralinks{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 10%;
+}
+.contenedor-links{
+    display: flex;
+    
+    width: 50%;
+}
+.items-barra{
+    flex: 1;
+    border: none;
+   border-left: 1px solid white;
+}
+.items-barra:last-child{
+    border: none;
+    border-left:1px solid white;
+    border-right: 1px solid white;
+}
+.boton-ingreso{
+    background-color: #2C3E50;
+    width: initial;
+   /* margin: initial !important;*/
+}
 }
