--- a/css/style-user.css
+++ b/css/style-user.css
@@ -1,12 +1,84 @@
-body{
-    background-image: url(../img/fondo1.jpg);
-background-size: 100%;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.contenedor_usuario{
+   background-image: url(../images/img-user/fondo1.JPG);
+   
+   
+background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.contenedor_col_nav{
+    padding: 0;
+}
+
+.barraNavegacion{
+   
+    background: #0f0c29;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, rgba(36, 36, 62, 0.6), rgba(48, 43, 99, 0.6), rgba(15, 12, 41, 0.6)),url("../images/imgNav.png");  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, rgba(36, 36, 62, 0.6), rgba(48, 43, 99, 0.6), rgba(15, 12, 41, 0.6)),url("../images/imgNav.png"); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
+    background-size: cover;
+     background-repeat: no-repeat;
+    border-bottom: 5px solid rgb(211, 182, 17);
+    
+}
+.logo-barra{
+    max-width: 200px;
+    max-height: 75px;
+}
+.menu-hamburguesa{
+    color: white;
+}
+.items-barra{
+    border-top: 1px solid white;
+    text-align: center;
+}
+.items-barra:last-child{
+    border-bottom: 1px solid white;
+    
 }
 
 
+.items-barra a:hover{
+    
+    background: #0F2027;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, rgba(44, 83, 100, 0.7), rgba(32, 58, 67, 0.7), rgba(15, 32, 39, 0.7));  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, rgba(44, 83, 100, 0.7), rgba(32, 58, 67, 0.7), rgba(15, 32, 39, 0.7)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    transition: ease all 1000ms;
+   
+}
+.items-barra a p{
+    
+    margin: 0;
 
-.navbar{
-margin: 20px;
+}
+.items-barra a p, .items-barra a i{
+    color: white;
+    font-weight: bold;
+}
+.boton-ingreso{
+    background: #2C3E50; 
+    color: white;
+    font-weight: bold;
+    width: 100%;
+    margin-top: 20px !important;
+    border: 1px solid black;
+
+}
+.boton-ingreso i{
+    margin-right: 5px;
+}
+.boton-ingreso:hover{
+    background-color: rgba(255, 255, 255, 0.61);
+    color: black;
+}
+
 }
 .image_outer_container{
     margin-top: auto;
@@ -51,4 +123,37 @@ h2{
 }
 .fab{
     border-radius: 50%;
+}
+
+@media (min-width: 992px){
+
+    /*---------------Barra de Navegacion -------------------*/
+
+.div-barralinks{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 10%;
+}
+.contenedor-links{
+    display: flex;
+    
+    width: 50%;
+}
+.items-barra{
+    flex: 1;
+    border: none;
+   border-left: 1px solid white;
+}
+.items-barra:last-child{
+    border: none;
+    border-left:1px solid white;
+    border-right: 1px solid white;
+}
+.boton-ingreso{
+    background-color: #2C3E50;
+    width: initial;
+   /* margin: initial !important;*/
+}
+
+
 }
