Estilo de card central

--- a/css/style.css
+++ b/css/style.css
@@ -163,14 +163,58 @@ body{
 .carta-promocion{
     position: relative;
     margin: 5% 0;
+    border-radius: 20px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 0 40px goldenrod;
+    transition: all .3s ease-in-out;
 }
+.carta-promocion:hover{
+    cursor: pointer;
+     border: 3px solid greenyellow;
+     box-shadow: 0 0 10px greenyellow, 0 0 40px greenyellow,0 0 80px greenyellow;
+
+}
+.imagen-articulo-contenedor{
+    position: absolute;
+     width: 100%;
+     top: 0;
+     bottom: 0;
+     left: 0;
+     right: 0;
+     z-index: 10;
+     background: rgba(0,0,0,.5);
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     color: white;
+     
+ }
+ .imagen-articulo{
+     width: 100%;   
+     border-radius: 20px;  
+ }
+ .acceso-carrito{
+     text-decoration: none;
+     color: white;
+     text-align: center;
+ }
+ .acceso-carrito:hover{
+     text-decoration: none;
+     color: white;
+     text-align: center;
+ }
+ .acceso-carrito h3, .acceso-carrito h4{
+     font-weight: bold;
+ }
 .carta-promocion .logo-promo{
     position: absolute;
     top: 1%;
     right: 2%;
     border-radius: 50%;
-    width: 70px;
-    height: 70px;
+    width: 20%;
+    height: auto;
+    z-index: 20;
 
 }
 .carta-promocion .favorito{
@@ -181,13 +225,14 @@ body{
     width: 30px;
     position: absolute;
     border-radius: 5px;
-    top: 1%;
+    top: 2%;
     left: 2%;
     font-size: 2.5rem;
-    background-color: rgba(0, 0, 0, 0.8);
+    background: transparent;
     color: white;
     border: none;
     transition: 500ms all ease;
+    z-index: 20;
     
 }
 
@@ -230,11 +275,12 @@ body{
     top: 1%;
     right: 2%;
     color: gold;
-    background-color: rgba(0, 0, 0, 0.8);
+    background: transparent;
     border-radius: 10px;
     font-size: 2.5rem;
     width: 50px;
     height: 50px;
+    z-index: 20;
 
 }
 /*
