--- a/css/style-user.css
+++ b/css/style-user.css
@@ -76,7 +76,7 @@ background-attachment: fixed;
     background-color: rgba(255, 255, 255, 0.61);
     color: black;
 }
-
+/* Stylo imagen user */
 }
 .image_outer_container{
     margin-top: auto;
@@ -100,8 +100,7 @@ background-attachment: fixed;
 }
 
 .image_outer_container .green_icon{
-  background-color: #4cd137;
-  position: absolute;
+  position:fixed;
   right: 30px;
   bottom: 10px;
   height: 30px;
@@ -110,7 +109,10 @@ background-attachment: fixed;
   border-radius: 50%;
 }
 .jumbotron{
-    background-image: url(../img/fondos.jpg);
+    background-image: url(../images/img-user/fondos.jpg);
+    background-size: cover;
+    margin-top: 30px;
+    height: 340px;
 }
 h2{
     background-color: beige;
@@ -153,5 +155,27 @@ h2{
    /* margin: initial !important;*/
 }
 
-
+.mujer{
+height: 30px;
+width: auto;
 }
+ /* tipografia gral */
+ 
+ .row{
+     font-size: 15px;
+     font-family: font-family: 'Roboto', sans-serif;
+     ;
+ }
+ h2{
+     font-size: 25px;
+     font-family: 'Nunito Sans', sans-serif;
+     
+ }
+ .list-group-item{
+     background-color: #0f0c29;
+     color:white
+ }
+ .list-group-item:hover{
+background-color: azure;
+color: black;
+ }
